--- a/package.json
+++ b/package.json
@@ -5,18 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "prisma generate && prisma db push && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@prisma/client": "^5.17.0",
     "react-dom": "^19.2.3",
     "react": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "prisma": "^5.17.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
